Mobile styles done but need to fix wrapping feature on desktop/tablet

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -79,26 +79,36 @@
 }
 /* For very small screens */
 @media only screen and (max-width: 365px) {
+
+#menu {
   article {
+
     display: flex;
     flex-direction: row;
+
   }
-}
+}}
 /* Tablets */
 @media only screen and (min-width: 768px) {
 
-  // #menu {
-  //   flex-direction: row;
-  //   flex-wrap: wrap;
-  //   max-width: 100%;
-  // }
+#menu {
 
-  // #menu article {
-  //   min-width: 49%;
-  //   max-width: 49%;
-  //   margin-left: 0.4vw;
-  //   margin-right: 0.4vw;
-  // }
+  .item-container {
+    flex-wrap: wrap;
+  }
 
-}
+  article {
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+
+    img {
+      width: 25vw;
+      height: 25vw;
+      background-size: cover;
+      margin: 0.5em;
+      border-radius: 2px;
+    }
+  }
+}}
 
